fix styling with score and alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -8,26 +8,34 @@ body {
     font-size: 14px;
 }
 
-.info {
+.info-instruction {
     width: 505px;
     padding: 20px 30px;
     align-self: center;
     text-align: left;
 }
 
-.instruction {
+#howto {
     background-color: #D1D0CE;
     border-radius: 10px;
     padding: 5px 10px;
     border: 2px solid black;
 }
 
-canvas {
+#rules {
+    background-color: #D1D0CE;
+    border-radius: 10px;
+    padding: 5px 10px;
+    border: 2px solid black;
+}
+
+#gameCanvas {
+    margin:auto;
     width: 505px !important;
     width: 606px !important:
 }
 
-#score {
+.info-score {
     background: #FFFFFF;
     border-radius: 20px;
     padding: 5px 20px;
@@ -42,7 +50,4 @@ canvas {
         flex-direction: column;
     }
 
-    .info {
-        width: 85%;
-    }
 }
